# moducomp

./: .gitignore  README.md  moducomp.py  pixi.toml  pyproject.toml  recipe.yaml
logs/: download_eggnog_data_patched.py
moducomp/: __init__.py  __main__.py  moducomp.py
moducomp/data/test_genomes/: IMG2568526683.faa
scripts/: download_eggnog_data.py
test_genomes/: IMG2562617132.faa  IMG2740892217.faa
